# shop-summary

./: .gitignore  pyproject.toml
.github/workflows/: run_pytest.yaml
src/: configs.py  constans.py  main.py  order.py  report.py  summary.py  utils.py
tests/: test_order.py  test_report.py  test_summary.py  test_utils.py
