[project]
name = "shop-summary"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "pydantic (>=2.11.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "reportlab (>=4.4.0,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "faker (>=37.3.0,<38.0.0)"
]

[tool.poetry]
package-mode = false
packages = [
    { include = "src" }
]

[tool.poetry.scripts]
dummy = 'src.main:generate_fake_data'
generate = 'src.main:main'

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
